--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "node-telegram-bot-api": "^0.66.0",
     "spworlds": "^2.2.2"
   }
 }
